Fixed styling of plugin detail pages, there is no need for them to stretch height-wise.

--- a/com.zutubi.pulse.master/src/www/css/main.css
+++ b/com.zutubi.pulse.master/src/www/css/main.css
@@ -1761,7 +1761,6 @@ div.popup-actions
 
 table.detail
 {
-    min-height: 100%;
     width: 100%;
     border: solid 1px #e0e0e0;
 }
